# munich-traffic-optimization

./: .gitignore  README.md  edge_capacity_sample.csv  munich_taufkirchen_simulation.py  poc.py  pyproject.toml  requirements.txt  streamlit_app.py  test.py
src/core/: __init__.py  base_simulation.py  config.py  traffic_participant.py
src/munich_traffic_optimization/: traffic_sim.py  traffic_sim_database.py  traffic_sim_temporal.py
src/simulation/: __init__.py  munich_simulation.py  routing_strategies.py
src/visualization/: graph_plotter.py
src/web/: app.py  components.py
